--- a/layout2.html
+++ b/layout2.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="layout2.js"></script>
 </head>
 <body>
-<div class="menu">
+	<div class="menu">
 		<ul class="active">
 			<li class="current-item"><a id="layout" href="#">Layout 3</a></li>
 			<li><a href="#">About</a></li>
@@ -25,41 +25,46 @@
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. </h2>
 			<button class="call_action">Call to Action!</button>
+	</div>
+	<div class="top_line">
+	</div>
+	<div class="feature">
+		<h2>Latest Features</h2>
+	</div>
+	<div class="main_div">
+		<div class="child">
+			<img src="img2.png">
+			<h2>Feature label</h2>
+			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+			<button class="buy_now">Buy Now!</button>
+			<button class="more_info">More Info</button>
 		</div>
-<div class="top_line"></div>
-<div class="feature"><h2>Latest Features</h2></div>
-		<div class="main_div">
-			<div class="child">
-				<img src="img2.png">
-				<h2>Feature label</h2>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-				<button class="buy_now">Buy Now!</button>
-				<button class="more_info">More Info</button>
-			</div>
-			<div class="child">
-				<img src="img2.png">
-				<h2>Feature label</h2>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-				<button class="buy_now">Buy Now!</button>
-				<button class="more_info">More Info</button>
-			</div>
-			<div class="child">
-				<img src="img2.png">
-				<h2>Feature label</h2>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-				<button class="buy_now">Buy Now!</button>
-				<button class="more_info">More Info</button>
-			</div>
-			<div class="child">
-				<img src="img2.png">
-				<h2>Feature label</h2>
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-				<button class="buy_now">Buy Now!</button>
-				<button class="more_info">More Info</button>
-			</div>
+		<div class="child">
+			<img src="img2.png">
+			<h2>Feature label</h2>
+			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+			<button class="buy_now">Buy Now!</button>
+			<button class="more_info">More Info</button>
 		</div>
-		<div class="footer"></div>
-		<div class="copyright"><p>Copyright &copy Your Website 2014</p></div>
-	</body>
-	</html>
+		<div class="child">
+			<img src="img2.png">
+			<h2>Feature label</h2>
+			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+			<button class="buy_now">Buy Now!</button>
+			<button class="more_info">More Info</button>
+		</div>
+		<div class="child">
+			<img src="img2.png">
+			<h2>Feature label</h2>
+			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+			<button class="buy_now">Buy Now!</button>
+			<button class="more_info">More Info</button>
+		</div>
+	</div>
+	<div class="footer"></div>
+	<div class="copyright">
+		<p>Copyright &copy Your Website 2014</p>
+	</div>
+</body>
+</html>
 
